--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,29 +1,25 @@
 /******* Customized Bootstrap ********/
 
-$primary: #00D084;
-$secondary:#17303B;
-$light: #F8F8F8;
-$dark: #111111;
+$primary: #1E60AA;
+$secondary: #FF4917;
+$light: #EDF1FC;
+$dark: #17224D;
 
-$font-family-base: "Inter",sans-serif;
+$font-family-base: 'Inter', sans-serif;
 
-$headings-font-family: "Roboto", sans-serif;
+$headings-font-family: 'Roboto', sans-serif;
 
-$body-color: #787878;
+$body-color: #6C7176;
 
 $headings-color: $dark;
 
-$headings-font-weight: 500;
+$headings-font-weight: 700;
 
 $display-font-weight: 700;
 
 $enable-responsive-font-sizes: true;
 
-$border-radius: 10px;
-
-$border-radius-sm: $border-radius;
-
-$border-radius-lg: $border-radius;
+$border-radius: 0px;
 
 $link-decoration: none;
 
